# cpp_serializers_benchmark

./: .gitignore  CMakeLists.txt  vcpkg.json
benchmarks/: CMakeLists.txt
benchmarks/alpaca/: CMakeLists.txt  alpaca.cc  alpaca.hh
benchmarks/bitsery/: CMakeLists.txt  bitsery_brief_syntax.cc  bitsery_brief_syntax.hh  bitsery_compatibility.cc  bitsery_compatibility.hh  bitsery_compression.cc  bitsery_compression.hh  bitsery_fixed_buffer.cc  bitsery_fixed_buffer.hh  bitsery_general.cc  bitsery_general.hh  bitsery_sstream.cc  bitsery_sstream.hh  bitsery_unsafe_read.cc  bitsery_unsafe_read.hh
benchmarks/flatbuffers/: CMakeLists.txt  flatbuffers.cc  flatbuffers.hh  monster.fbs
benchmarks/memcpy/: CMakeLists.txt  memcpy.cc  memcpy.hh
benchmarks/zpp_bits/: CMakeLists.txt  zpp_bits.cc  zpp_bits.hh  zpp_bits_fixed.cc  zpp_bits_fixed.hh
common/: CMakeLists.txt
common/common/: types.h
src/: CMakeLists.txt  main.cpp  types.cpp  uniform_distributions.h
